Completed notes up to (not including) 2.2.3.

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -58,3 +58,83 @@ if(i) // condition will evaluate as true
 ```
 
 ## 2.2. Variables
+
+### 2.2.1. Variable Definitions
+
+ - Each name has a type and name of variable. A definition may (optionally) provide initial value.
+
+```cpp
+int sum = 0, value, units_sold = 0; // sum, value and units_sold have type int. sum and units_sold are initialized to 0.
+Sales_item item;
+std::string book("abc");
+```
+ - Definition of book uses **std::string** library type. Similar to iostream, string is defined in namespace **std**. 
+
+**List Initialization**
+
+We can use any of the following 4 ways to define an int variable name units_sold:
+
+```cpp
+int units_sold = 0;
+int units_sold = {0};
+int units_sold{0};
+int units_sold(0);
+```
+
+ - The use of curly braces is a new standard. 
+ - Note that compiler will not let us initialize variables of build-in type if initializer might lead to loss of information: For example:
+
+```cpp
+long double ld = 3.1415926536;
+int a{ld}, b = {ld}; // ERROR: loss of information
+int c(ld), d = ld; // OK: but value will be truncated/loss of information
+```
+
+**Default Initialization**
+
+ - When we define a variable without an initializer, the variable is **default initialized**. 
+ - The value of a **build-in type** that is not explicitly initialized depends on where it is defined. 
+   - If outside any function body, it's initialized to zero (with 1 exception; will be covered later)
+   - If inside any function body, it's initialized to undefined; thus, is an error to copy or access.
+ - For **custom classes**, it depends on the class itself. 
+   - Most classes let us define objects with explicit initializers.
+   - Eg. uninitialized string is an empty string.
+
+# 2.2.2. Variable Declarations and Definitions
+
+ - **Separate Compilation** lets us split our program into several files, each of which can be compiled independently.
+   - When we separate the program into multiple files, we need a way to share the code across the files.
+   - For example, code defined in one file may need to use a variable in another file, in the form of a library. Eg: std::cout.
+   - To support separate compilation, C++ **distinguishes betweeen** declaration and definition.
+ - A **declaration** makes a name known to the program. 
+   - A file that wants to use a name defined elsewhere includes a declaration for that name.
+   - Specifies **type** and **name** 
+ - A **definition** creates the associated entity.
+   - Is a declaration. In addition, also **allocates storage and may provide initial value**.
+ - We use **extern** to obtain a declaraction that is not also a definition.
+
+```cpp
+extern int i; // declares but does not define i
+int j; // declares and defines j
+```
+
+ - We can provide an initialize value to an extern variable, but doing so **overrides** the extern.
+
+```cpp
+extern double pi = 3.1416; // definition
+```
+
+ - *It is an error to provide an initializer on an extern inside a function.*
+
+ - Note that **Variables must be defined exactly once, but can be declared many tiems.**
+
+**Final Note**
+
+ - To use the same variable in multiple files, we must **define that variable in one (and only one) file.**
+ - Other files that use that variable must **declare, but not define** that variable.
+
+
+
+
+
+
