Finished notes for 2.2.

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -133,8 +133,34 @@ extern double pi = 3.1416; // definition
  - To use the same variable in multiple files, we must **define that variable in one (and only one) file.**
  - Other files that use that variable must **declare, but not define** that variable.
 
+### 2.2.3. Identifiers
 
+ - Identifiers must **begin with either a letter or an underscore**, is **case-sensitive**.
 
+**Conventions**
 
+ - Variable names are normally lowercase; eg. index.
+ - Class names usually begin with uppercase letter; eg. Sales_item
+ - Identifiers with multiple words should visually distinguish each word; eg. student_loan or studentLoan, NOT studentloan.
 
+ ### 2.2.4. Scope of a name
 
+ - A **scope** is a part of the program in which a name has a particular meaning.
+   - Most scopes in C++ are delimited by curly braces.
+
+```cpp
+#include <iostream>
+int reused = 42;
+
+int main()
+{
+  int unique = 0;
+  std::cout << reused << " " << unique << std::endl;  // out 1: prints 42 0
+  int reused = 0; // new, local object named reused, hides global reused.
+  std::cout << reused << " " << unique << std::endl;  // out 2: prints 0 0
+  std::cout << ::reused << " " << unique << std::endl;  // explicitly requests global scope; out 3: prints 42 0
+  return 0;
+}
+```
+ - output #3 uses the scope operator to override the default scoping rules.
+   - For more information, you can check out: https://www.geeksforgeeks.org/scope-resolution-operator-in-c/
