Completed up to, but not including, 2.3.3.

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -164,3 +164,183 @@ int main()
 ```
  - output #3 uses the scope operator to override the default scoping rules.
    - For more information, you can check out: https://www.geeksforgeeks.org/scope-resolution-operator-in-c/
+
+# 2.3. Compound Types
+
+ - A **compound type** is type that is defined in terms of another type.
+ - C++ hash several compount types; **references and pointers**.
+
+### 2.3.1. References
+
+ - A **reference** defines an alterantive name for an object; "refers to" another type.
+ - We define a reference type by writing a declaractor of the form **\&d**, where d is the name being declared.
+
+```cpp
+int ival = 1024;
+int &refVal = ival; // refVal refers to (is another name for) ival
+int &refVal2; // ERROR: a reference must be initialized.
+```
+
+ - When we **initialize** a variable, the value of the initializer is copied into the object we are creating. 
+ - However, when we **define a reference**, instead of copying the initializer's value, we **bind the reference to its initializer**. 
+ - Once initialized, a reference remains bound to its initial object; there is **no way to rebind** a reference to refer to a different object.
+   - Because **references must/can only be initialized**.
+
+**A Reference is an Alias**
+
+ - Note: A reference is NOT an object, instead, it's just another name for an already existing object.
+ - **After a reference has been defined, all operations on that reference are actually operations on the object to which the reference is bound:**
+   - When we assign to a reference, fetch value of a reference or use a reference as an initializer, we are really using the object to which the reference is bound.
+
+```cpp
+refVal = 2;
+int ii = refVal;
+int &refVal3 = refVal; // refVal3 is bound to which refVal is bound (ival)
+int i = refVal; // initializes i to same value as ival.
+```
+
+ - Because references are not objects, we **cannot define a reference to a reference**.
+   - By this, I think it means that when we define refA to a refB (refA = refB), we are defining it with the object that refB; and not refB itself.
+
+ - a reference **must bound only to an object**, not a literal.
+
+```cpp
+int &refVal4 = 10; // ERROR: initializer must be an object.
+double dval = 3.14;
+int &refVal5 = dval; // ERROR: initializer must be an int object
+```
+### 2.3.2. Pointers
+
+ - A **pointer** is a compound type that "points to" another type.
+ - Like references, pointers are used for indirect access to other objects.
+ - Unlike references, pointer is an object, can be assigned and copied, can be reassigned and need not be initialized when defined.
+ - Like other built-in types, pointers defined at block scope have undefined value if they are not initialized.
+ - We write pointer in the form of \*d; eg. int *ip1; double *d2;
+
+**Taking the address of an object**
+
+ - A pointer holds the address of another object. 
+ - We get the address of an object by using the address-of operator (the \& operator):
+```cpp
+int ival = 42;
+int *p = &ival; // p holds the address of ival; p is a pointer to ival.
+```
+
+ - We cannot define pointer to reference, because reference is not an object.
+
+```cpp
+double dval;
+double *pd = &dval; // OK: initializer is the address of a double
+double *pd2 = pd; // OK: initializer is a pointer to double
+int *pi = pd; // ERROR: types of pi and pd differ
+pi = &dval; // ERROR: assigngin the address of a double to a pointer to int.
+```
+ - As shown above, the types must match.
+
+**Pointer Value**
+
+ - The value stored in a pointer can be in one of four states:
+  1. It can point to an object.
+  2. It can point to the location just immediately past the end of an object.
+  3. It can be a null pointer, indicating that it is not bound to any object.
+  4. It can be invalid; values other than the preceding three are invalid.
+
+ - It is an **ERROR to try to access or copy an invalid pointer**
+
+**Using a pointer to access an object**
+
+ - When a pointer points to an object, we can use the **dereference operator(\*) to access that object**
+ - Dereferencing a pointer yields the object to which the pointer points to. 
+ - We can assign to that object by assigning to the result of the dereference.
+
+```cpp
+int ival = 42;
+int *p = &ival; // p holds the address of ival; p is a pointer to ival.
+cout << *p // Dereferenced. * yields the object to which p points; prints 42. 
+*p = 0; // Because * yields the object, we assign a new value to ival through p.
+cout << *p; // prints 0.
+```
+ - Note that we can only dereference a valid pointer that points to an object.
+
+**Clearing up Confusion: Some symbols have Multiple Meanings**
+
+```cpp
+int i = 42;
+int &r = i; // % follows a type and is part of a declaration; r is i.
+int *p; // * follows a type and is part of a declaration; p is a pointer.
+p = &i; // & is used in an expression as the address-of operator;
+*p = i; // * is used in an express as the dereference operator; i = i.
+int &r2 = *p; // & is part of the declaraction; * is the dereference operator.
+```
+
+**Null Pointers**
+
+ - A **null pointer** does not point to any object. 
+ - Code can check whether a pointer is null before attempting to use it.
+
+```cpp
+int *p1 = nullptr;
+int *p2 = 0;
+int *p3 = NULL; 
+```
+
+ - **nullptr** is a literal that has a special type that can be converted to **any other pointer type**
+ - Literal 0 can also be used to create null pointer.
+   - However, it's illegal to assign an int variable to a pointer, even if the variable's value is 0.
+ - Older programs sometimes use a **preprocessor variable** named NULL, which the cstdlib header defines as 0; 
+   - **But modern C++ programs should avoid this!**
+
+```cpp
+int zero = 0;
+int *pi = zero; // ERROR: canot assign int to pointer
+```
+
+**Advice: Initialize all Pointers**
+
+ - Uninitialized pointers are a **common source of run-time errors**. 
+ - Uninitialized pointers almost always result in run-time crash, but is **surprisingly difficult to debug**.
+ - It is advised to **always initialize pointers**. If possible, to an object, else, initialize as a null pointer (via nullptr or 0).
+   - That way, the program can detect that the pointer does not point to an object.
+
+**Assignment and Pointers**
+
+```cpp
+int i = 42;
+int *pi = 0; // p1 is a null pointer
+int *pi2 = &i; // p2 holds address of i
+int *pi3; // p3 is uninitialized.
+pi3 = pi2; // pi1 and pi2 address same object (i)
+pi2 = 0; // pi2 now address no object; is null pointer.
+pi = &ival; // address in pi is changed, pi now points to ival.
+*pi = 0; // value in ival (cuz pi points to ival) has changed.
+```
+
+**Using pointer as boolean**
+
+```cpp
+int *pi = 0;
+int *pi2 = &ival;
+
+if(pi) // pi has value 0, thus, condition is false
+  // ....
+if(pi2) // pi2 points to ival, thus, condition is true
+  // ...
+```
+
+**void \* pointer**
+
+ - The type **void\*** is a special pointer type that can hold the address of any object.
+ - It holds an address (like a pointer), but the **type of the object** at the address is **unknown**
+
+```cpp
+double obj = 3.14, *pd = &obj; // OK: void* can hold address value of any data pointer type
+void *pv = &obj;
+pv = pd; // void pointer can be assigned to another void pointer.
+```
+
+ - There are a limited number of things a void\*pointer can do:
+   - compare to another pointer
+   - pass it to or return it from a functino
+   - assign it to another void\* pointer.
+ - Note that we **cannot use void\* to operate on the object is addresses**; because we don't know what object's type.
+ 
