--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -343,4 +343,53 @@ pv = pd; // void pointer can be assigned to another void pointer.
    - pass it to or return it from a functino
    - assign it to another void\* pointer.
  - Note that we **cannot use void\* to operate on the object is addresses**; because we don't know what object's type.
- 
+
+### 2.3.3. Understanding Compound Type Declarations
+
+```cpp
+int* p // legal, but might be misleading
+int* p1, p2; // p1 is a pointer, p2 is an int
+```
+
+**Pointer to Pointers**
+
+ - We indicate each pointer level by its own.
+   - That is, we write ** for pointer to pointer, and *** for pointer to a pointer to a pointer; and so forth.
+
+```cpp
+int ival = 1024;
+int *pi = &ival; // pi points to ival
+int **ppi = &pi; // ppi points to a pointer to an int.
+cout << "The value of ival\n" 
+      << "direct value: " << ival << "\n"
+      << "indirect value: " << *pi << "\n"
+      << "doubly indirect value: " << **ppi 
+      << endl;
+/* 
+prints:
+The value of ival
+direct value: 1024
+indirect value: 1024
+doubly indirect value: 1024
+*/
+```
+
+ - [ppi] -> [pi] -> [ival(1024)]
+
+**References to Pointers**
+
+```cpp
+int i = 42;
+int *p; // p is a pointer to int
+int *&r = p; // r is a reference to the pointer p (explained later)
+r = &i; // r refers to a pointer; assigning &i to r makes p point to i; Equivalent to p = &i;
+*r = 0; // dereferencing r yields i, the object to which which p points; changes i to 0.
+```
+**How to Interpret int *&r?**
+ - The easiest is to read the definition from right to left.
+   - The symbol closest to the name of the variable (in this case, the & in &r), is the one that has the most immediate effect on the variable's type.
+   - The rest of the declarator determines the type to which r refers.
+ - I think of it as "int* &r".
+   - &r is a reference.
+   - It refers to an int pointer.
+
