Completed up to (not incl) 2.5.

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -393,3 +393,186 @@ r = &i; // r refers to a pointer; assigning &i to r makes p point to i; Equivale
    - &r is a reference.
    - It refers to an int pointer.
 
+## 2.4. const Qualifier
+
+```cpp
+const int bufSize = 512;
+const int i = get_size(); // OK
+const int j; // ERROR: must be initialized.
+int k = i; // OK. value of i is copied to k. 
+```
+
+**By Default, const Objects are local to a file**
+
+ - When we use const, the compiler usually rpelaces the variable with its corresponding value during compilation.
+ - Thus, when we split a program into multiple files, every file that uses the const must have access to its initializer.
+ - And to see the initializer, the variable must be defined in every file that wnats to use the variable's value.
+ - To support this usage, yet avoid multiple definitions of the same variable, const variables are defined as **local to the file**.
+ - **When we define a const with the same name in multiple files, it is as if we had written definitions for separate variables in each file**.
+
+**What if we have a const variable that we want to share across multiple files?**
+ - To define a single instance of a const variable, we use the keyword **extern** on both its definition and declaration.
+
+```cpp
+// file_1.cc:
+extern const int bufSize = fcn();
+
+// file_1.h:
+extern const int bufSize;
+```
+
+ - In this program, file_1.cc defines and initializes bufSize. Because this declaration includes an initializer, it is a definition.
+ - However, because bufSize is a const, we must specify extern in order for bufSize to be used in other files.
+ - The declaration in file_1.h is also extern. In this case, the extern signifies that bufSize is not local to this file and that its definition will occur elsewhere.
+
+### 2.4.1. References to const
+
+```cpp
+const int ci = 1024;
+const int &r1 = ci; // OK
+r1 = 24; // ERROR: r1 is reference to a const
+int &r2 = ci; // ERROR: non-const reference to a const object
+```
+
+**Assigning non-const obj to const obj**
+
+ - Previously, we said there are two exceptions to the rule that the type of a reference must match the type fo the object it refers to. The first exception is that **we can initialize a reference to const from any expression that can be converted to the type of reference**.
+
+```cpp
+int i = 42;
+const int &r1 = i; // OK: we can bind a const int& to a plain int object.
+const int &r2 = 42; // OK
+const int &r3 = r1 * 2; // OK
+int &r4 = r1; // r4 is plain, non const reference.
+```
+
+ - Under the hood, we use a temporary object. For example, when we see:
+
+```cpp
+double dval = 3.14;
+const int &ri = dval;
+```
+
+The compiler actually converts it to:
+
+```cpp
+const int temp = dval;  // create a temporary object based on reference type.
+const int &ri = temp;   // bind ri to that temporary
+```
+
+**A reference to const May refer to an Object that is not const**
+
+```cpp 
+int i = 42;
+int &r1 = i; // ri is bound to i
+const int &r2 = i; // r2 is bound to i; but cannot be used to change i.
+r1 = 0; // r1 is nto const; i is set to 0
+r2 = 0; // ERROR: r2 is a reference to const. Changing const is illegal.
+```
+
+### 2.4.2. Pointers and const
+
+ - Similar to references, we can store address of a const object only in a pointer to const:
+
+```cpp
+const double pi = 3.14;
+double *ptr = &pi; // ERROR: ptr is a plain pointer
+const double *cptr = &pi; // OK
+*cptr = 42; // ERROR: can't assign to *cptr cuz const.
+```
+
+ - Similar to reference to const, a pointer to const means we cannot change the value pointed by the pointer.
+
+```cpp
+double dval = 3.14;
+const double *cptr = &dval; // OK, but we cannot change dval through cptr
+```
+
+**const Pointers**
+
+ - Unlike references, pointers are object. Therefore, **Pointers themselves can be constant**.
+   - A const Pointer means once initialized wiht a value, it cannot be changed.
+   - We indicate a const pointer by putting const after the \*.
+
+```cpp
+int errNum = 0;
+int *const currErr = &errNum;  // curErr will ALWAYS point to errNum.
+const double pi = 3.14159;
+const double *const pip = &pi;
+```
+
+ - Note that a const pointer does not indicate whether the point-to object is const or not.
+
+```cpp
+*pip = 2.72; // ERROR: pip is a pointer to const
+*curErr = 0; // OK: since errNum is not const.
+```
+
+### 2.4.3. Top-Level const
+
+ - We use **top-level const** to indicate that the pointer itself is a const.
+ - When a pointer can point to a const object, we refer to that const as a **low-level const**.
+
+```cpp
+int i = 0;
+int *const p1 = &i; // cannot change p1; const is top-level
+const int ci = 42; // cannot change ci; const is top-level
+const int *p2 = &ci; // change change p2; const is low-level
+const int *const p3 = p2; // both top and low level const
+```
+
+### 2.4.4. constexpr and Constant Expressions
+
+ - A **constant expression** is an express whose value cannot change and that can be evaluated at compile time.
+ - A literal is a constant expression.
+ - A const object that is initialized from a constant expression is also a constant expression.
+
+```cpp
+const int max_files = 20; // max_files is a constant expression
+const int limit = max_files + 1; // limit is a constant expression
+int staff_size = 27; // staff-size is NOT a constant expression
+const int sz = get_size(); // sz is NOT a constant expression
+``` 
+ - Although staff_size is initialized from a literal, it is **not a constant expression because it is a plain int**, not a const int.
+ - Even though sz is a const, the value of its initializer is not known until run time. Hence, sz is NOT a constant expression.
+
+**constexpr variables**
+
+ - In a large system, it can be difficult to determine for certain that an initializer is a constant expression.
+ - We can use **constexpr** to ensure our variable is initialized by constant expressions:
+
+```cpp
+constexpr int mf = 20;
+constexpr int limit = mf + 1;
+constexpr int sz = size(); // OK, ONLY if size is a constexpr function
+```
+
+**Literal Types**
+
+ - Because a constant expression is one that can be evaluated at compile time, we can **only use literal types in a constexpr declaration.**
+   - Because they are simple enough to have literal values.
+   - Arithmetic, reference and pointer types are literal types.
+   - But Sales_item class and library IO and string types are NOT literal types.
+
+**constexpr pointers and references**
+
+ - The objects we use to initialize a constantexpr pointer or reference is strictly limited too.
+ - **Literals and Objects that remains at a fixed address are okay.**
+   - But variables defined in a function are not stored at a fixed address, thus, cannot use constexpr.
+
+```cpp
+constexpr int *np = nullptr; // np is a constant pointer to null pointer
+int j = 0;
+constexpr int i = 42;
+
+// i and j must be defined outside any function
+constexpr const int *p = &i; // p is a constant pointer to a constant int.
+constexpr int *p1 = &j; // p1 is a constant pointer to an int.
+```
+
+
+
+
+
+
+
