Completed 2.5.1. 类型别名（Type Alias）

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -570,6 +570,48 @@ constexpr const int *p = &i; // p is a constant pointer to a constant int.
 constexpr int *p1 = &j; // p1 is a constant pointer to an int.
 ```
 
+## 2.5. 处理类型
+
+### 2.5.1. 类型别名（Type Alias）
+
+ - 类型别名是某种类型的同义词。
+ - 使用类型别名有很多好处，他让复杂的类型名字变得简单了，易于理解和使用，还有助于程序员清楚地知道使用该类型的真正目的。
+ - 有两种方法可用于定义类型别
+
+ 1. 传统方法是使用关键词**typedef**：
+ ```cpp
+typedef double wages; wages是double的同义词
+typedef wages base, *p；base是double的同义词，p是double*的同义词。
+ ```
+ - 2. 使用别名声明（alias declaration）来定义类型的别名，比如：
+```cpp
+using SI = Sales_item; // SI 是Sales_item 的同义词
+```
+ - 只要是类型的名字能出现的地方，就能使用类型别名：
+ ```cpp
+ wages hourly, weekly; // 等价于double hourly, weekly;
+ SI item；    // 等价于Sales_item item
+ ```
+
+### 指针、常量和类型别名
+
+```cpp
+typedef char *pstring;
+const pstring cstr = 0; // cstr是指向char的常量指针（char constant pointer)
+const pstring *ps; // ps是一个指针，他的对象是指向char的常量指针 (pointer to char constant pointer)
+```
+
+```
+const pstring cstr = 0;
+VS
+const char *cstr = 0;
+```
+
+ - 注意：const pstring cstr 跟 const char *cstr **不是**同样的东西
+   - 前者(const pstring cstr) 是一个指向char的常量指针(constant pointer)
+   - 而后者(const char *cstr) 是一个指向const char的指针 (pointer)
+
+
 
 
 
