Completed 1.5.1. Sales_item class and exercise cpp

--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -150,8 +150,30 @@ int main()
  - We need to define a data structure to represent our transaction data.
 
 ### 1.5.1. Sales_item class
- - TODO: Come back
 
+```cpp
+#include <iostream>
+#include "Sales_item.h"
+int main()
+{
+  Sales_item book;
+  std::cin >> book;
+  std::cout << book << std:endl;
+  return 0; 
+}
+```
+```
+Input:
+0-201-70353-X 4 24.99 (parameters for Sales_Item)
+Output:
+0-201-70353-X 4 99.96 24.99 
+```
+
+ - 此程序以两个#include指令开始：
+   - 包含来自标准库的头文件时，应该用尖括号（<>）包围头文件名。
+   - 对于不属于标准的头文件，则用双引号（""）包围。
+
+## 1.5.2... TODO
 
 ## 1.6. BookStore Program
 TODO: Come bac
