Finish 1.5. notes and exercise

--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -173,7 +173,15 @@ Output:
    - 包含来自标准库的头文件时，应该用尖括号（<>）包围头文件名。
    - 对于不属于标准的头文件，则用双引号（""）包围。
 
-## 1.5.2... TODO
+## 1.5.2. 初识成员函数
+
+```
+item1.isbn()
+```
+ - 在此，isbn是**成员函数（member function）**，有时候也被称为**方法（method）**。
+ - **点运算法(.)**
+ - **参数（argument）**
+ 
 
 ## 1.6. BookStore Program
 TODO: Come bac
