Finish ch01 notes

--- a/ch01/ch01.md
+++ b/ch01/ch01.md
@@ -181,7 +181,22 @@ item1.isbn()
  - 在此，isbn是**成员函数（member function）**，有时候也被称为**方法（method）**。
  - **点运算法(.)**
  - **参数（argument）**
- 
 
 ## 1.6. BookStore Program
-TODO: Come bac
+ - nothing worth noting.
+
+## 单词 keywords
+ - 注释（shi4）：comments
+ - 花括号：curly braces
+ - 文件结束符：end-of-file
+ - 表达式：expression
+ - 头文件：header file
+ - 库类型：library type
+ - 命名空间：namespace
+ - 形参列表：parameter list；函数定义的一部分，指出调用函数时可以使用什么样的实参，可能为空列表。
+ - 源文件：source file
+ - 标准库：standard library；一个类型和函数的集合，每个C++编译器都必须支持。
+ - 语句：statement
+ - std：标准库所使用的命名空间
+ - 字符串：string
+ - 
