Completed exercise up to 2.2

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -1,16 +1,64 @@
 # Chapter 2: Variables and Basic Types
 
+### 2.1.1. 算术类型
+
+| 类型 | 含义 | 最小尺寸|
+|---|---|---|
+| `bool` | 布尔类型  | 8bits |
+| `char`| 字符 | 8bits |
+| `wchar_t` | 宽字符 | 16bits |
+| `char16_t` | Unicode字符 | 16bits |
+| `char32_t` | Unicode字符 | 32bits |
+| `short` | 短整型 | 16bits |
+| `int` | 整型 | 16bits (在32位机器中是32bits) |
+| `long` | 长整型 | 32bits |
+| `long long` | 长整型 | 64bits （是在C++11中新定义的） |
+| `float` | 单精度浮点数 | 6位有效数字 |
+| `double` | 双精度浮点数 | 10位有效数字 |
+| `long double` | 扩展精度浮点数 | 10位有效数字 |
+
+ - Why bool is 8 bits instead of 1 bit?
+   - Because every C++ data type must be addressable.
+   - How would you create a pointer to a single bit? You can't. But you can create a pointer to a byte. So a boolean in C++ is typically byte-sized. (It may be larger as well. That's up to the implementation. The main thing is that it must be addressable, so no C++ datatype can be smaller than a byte)
+
+ - Calculating max and min value of signed and unsigned int32?
+   - total_space = 2^32-1 = 4 294 967 295
+   - Unsigned
+     - max_val = 4 294 967 295
+     - min_val = 0
+   - Signed
+     - max_val = floor(total_space/2) = 2 147 483 647
+     - min_val = ceil(total_space/2) = -2 147 483 648
+
+ - What happens when you calculate signed int and unsigned int together?
+   - 当signed int 和int相加，将int转换为unsigned int类型。
+```cpp
+signed i = 0;
+unsigned j = -10;
+auto k = i+j;
+std::cout << k << std::endl;  // outputs 4294967286 (unsigned)
+``` 
+   - But it also depends on whether you do type conversion
+```cpp
+signed i = 0;
+unsigned j = -10;
+signed int k = i+j;
+std::cout << k << std::endl;  // outputs -10 (signed)
+===
+signed i = 0;
+unsigned j = -10;
+unsigned k = i+j;
+std::cout << k << std::endl;  // outputs 4294967286 (unsigned)
+```
+
 ### 2.2.1. Arithmetic Types
 
  - 2 categories: integral types (incl character and boolean types) and floating-point types
 
- - Types: 
-   - bool, char, wchar_t, char16_t, char32_t, short, int, long, long long, float, double, long double.
-
-   - char type is guaranteed to be big enough to hold numeric values corresponding to the characters in the machine's **basic** character set.
-   - wchar_t type is guaranteed to be large enough to hold any character in the machine's **largest** extended cahracter set.
-   - char16_t and char32_t are intended for Unicode characters.
-   - numerical types based on integer range: short <= int <= long <= long long
+  - char type is guaranteed to be big enough to hold numeric values corresponding to the characters in the machine's **basic** character set.
+  - wchar_t type is guaranteed to be large enough to hold any character in the machine's **largest** extended cahracter set.
+  - char16_t and char32_t are intended for Unicode characters.
+  - numerical types based on integer range: short <= int <= long <= long long
 
 **Signed and Unsigned Types**
 
@@ -36,6 +84,14 @@ if(i) // condition will evaluate as true
   i = 0;
 ```
 
+### 2.1.3. 字面值常量（literal）
+
+**整形和浮点型字面值**
+
+ - ``20`` /* 十进制 */
+ - ``024`` /* 0开头的代表八进制 */
+ - ``0x14`` /* 0x开头的代表十六进制 */
+ 
 **Character and Character String Literals:**
 
  - Compiler appends a null character ('\\0') to every string literal.
@@ -82,7 +138,7 @@ int units_sold(0);
 ```
 
  - The use of curly braces is a new standard. 
- - Note that compiler will not let us initialize variables of build-in type if initializer might lead to loss of information: For example:
+   - Note: that compiler will not let us initialize variables of build-in type if initializer might lead to loss of information: For example:
 
 ```cpp
 long double ld = 3.1415926536;
