Completed up to 2.4.2

--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -91,7 +91,7 @@ if(i) // condition will evaluate as true
  - ``20`` /* 十进制 */
  - ``024`` /* 0开头的代表八进制 */
  - ``0x14`` /* 0x开头的代表十六进制 */
- 
+
 **Character and Character String Literals:**
 
  - Compiler appends a null character ('\\0') to every string literal.
@@ -329,7 +329,7 @@ p = &i; // & is used in an expression as the address-of operator;
 int &r2 = *p; // & is part of the declaraction; * is the dereference operator.
 ```
 
-**Null Pointers**
+**Null Pointers（空指针）**
 
  - A **null pointer** does not point to any object. 
  - Code can check whether a pointer is null before attempting to use it.
@@ -404,7 +404,7 @@ pv = pd; // void pointer can be assigned to another void pointer.
 
 ```cpp
 int* p // legal, but might be misleading
-int* p1, p2; // p1 is a pointer, p2 is an int
+int* p1, p2; // p1 is a pointer, p2 is an int. int* only passes the * to the p1.
 ```
 
 **Pointer to Pointers**
@@ -492,7 +492,7 @@ int &r2 = ci; // ERROR: non-const reference to a const object
 
 **Assigning non-const obj to const obj**
 
- - Previously, we said there are two exceptions to the rule that the type of a reference must match the type fo the object it refers to. The first exception is that **we can initialize a reference to const from any expression that can be converted to the type of reference**.
+ - Previously, we said there are two exceptions to the rule that the type of a reference must match the type of the object it refers to. The first exception is that **we can initialize a reference to const from any expression that can be converted to the type of reference**.
 
 ```cpp
 int i = 42;
@@ -515,6 +515,9 @@ The compiler actually converts it to:
 const int temp = dval;  // create a temporary object based on reference type.
 const int &ri = temp;   // bind ri to that temporary
 ```
+
+ - 如果ri不是常量呢？
+   - 假设这样，我们就可以更改``const int temp``的值，但由于temp是常量所以这个说不通，因此C++把这种行为归为违法。
 
 **A reference to const May refer to an Object that is not const**
 
@@ -666,8 +669,6 @@ const char *cstr = 0;
  - 注意：const pstring cstr 跟 const char *cstr **不是**同样的东西
    - 前者(const pstring cstr) 是一个指向char的常量指针(constant pointer)
    - 而后者(const char *cstr) 是一个指向const char的指针 (pointer)
-
-
 
 
 
