--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -660,15 +660,56 @@ const pstring cstr = 0; // cstr是指向char的常量指针（char constant poin
 const pstring *ps; // ps是一个指针，他的对象是指向char的常量指针 (pointer to char constant pointer)
 ```
 
-```
-const pstring cstr = 0;
-VS
-const char *cstr = 0;
-```
-
- - 注意：const pstring cstr 跟 const char *cstr **不是**同样的东西
+ - **注意**：``const pstring cstr`` 跟 ``const char *cstr`` **不是**同样的东西
    - 前者(const pstring cstr) 是一个指向char的常量指针(constant pointer)
    - 而后者(const char *cstr) 是一个指向const char的指针 (pointer)
+
+
+## 2.5.2. auto 类型说明符
+ - 不需要指明类型，编译器会透过初始值推算正确的类型。
+
+```cpp
+auto item = val1 + val2; // 编译器会按照val1和val2的类型推算item的类型
+```
+
+ - 当使用auto声明多个变量，该语句中所有变量的初始值必须一样。
+```cpp
+auto i = 0, *p = &i; // 正确：i是整数，p是整数指针
+auto sz = 0, pi = 3.14; // 错误：两个类型不同
+```
+
+**复合类型、常量和auto**
+
+ - 当auto类型的值是引用时，推算出来的（auto）类是引用指向的类。
+```cpp
+int i=0; &r=i;
+auto a=r; // a是一个整数（r是i的别名，而i是一个整数）
+```
+
+ - 其次，auto一般会忽略掉顶层const，底层const会保留：
+```cpp
+const int ci = i, &cr = ci;
+auto b = ci; // b是整数（int）类（顶层被忽略）
+auto c = cr; // c是整数（int）类（因为cr是int的别名）
+auto d = &i; // d是整数指针（因为i可以是整数）
+auto e = &ci; // e是指向常量整数的指针（常量整数是底层const，会被保留）
+```
+
+ - 定义顶层const
+```cpp
+const auto f = ci; // 透过const auto 指明顶层const
+```
+
+ - 引用：顶层const会被保留！
+```cpp
+auto &g = ci; // g是一个整数常量引用，绑定ci
+auto &h = 42; // 错误：不能为非常量引用绑定字面值（literal）
+const auto &j = 42; // 正确：使用const auto就可以绑定字面值
+
+auto k = ci, &l = i; // k是int，l是int引用，ci是const int
+auto &n = i, *p2 = &ci; // 错误：两个类型不一致：i是int，而ci是const int
+```
+
 
 
 
