--- a/ch02/ch02.md
+++ b/ch02/ch02.md
@@ -710,9 +710,33 @@ auto k = ci, &l = i; // k是int，l是int引用，ci是const int
 auto &n = i, *p2 = &ci; // 错误：两个类型不一致：i是int，而ci是const int
 ```
 
+## 2.5.3. decltype 类型指示符
 
+ - 从表达式的类型推断出要定义的变量的类型。
+ - ``decltype(f()) sum = x;`` 推断sum的类型是函数f的返回类型。
+ - 不会忽略顶层const。
+ - C++11
 
+```cpp
+const int ci = 0, &cj = ci;
+decltype(ci) x = 0; // x是const int
+decltype(cj) y = x; // y是int引用，绑定x
+decltype(cj) z; // 错误：z是int引用，必须有初始值
+```
 
+**decltype和引用**
 
+```cpp
+int i = 42, *p = &i, &r = i;
+decltype(r + 0) b; // 正确：b是int，虽然r是int引用，但加上+0后，却变成了int
+decltype(*p) c; // 错误：c是int&，必须初始值；这个下面详细解释
+```
+ - 按我理解，我们首先要探讨为什么\*p(dereference)是解引用，而不是解指针？我觉得是因为我们使用\*p的时候，我们就是在使用引用来访问（reference）p指的对象。从而，当我们在decltype里使用*p，得出的是p指向的对象的引用。
 
-
+ **decltype加上括号**
+ - 如果在decltype加上一层括号，编译器会把它当成表达式。由于变量是一种可以作为赋值语句的特殊表达式，所以这样的decltype就会得到引用类型：
+ - 切记：``decltype((variable))`` 的结果永远是引用，而``decltype(variable)``结果只有当variable本身是一个引用时才是引用。
+ 
+ ```cpp
+decltype((i)) d; // 错误：d是int引用，比如初始值
+```
