Completed all of 3.2

--- a/ch03/ch03.md
+++ b/ch03/ch03.md
@@ -153,4 +153,35 @@ string s6 = s1 + ", " + "world";  // 正确：因为实际上是s6 = (s1 + ", ")
 string s7 = ("a" + "b") + s1;  // 错误
 ```
 
+## 3.2.3. 处理string对象中的字符
+
+ - cctype头文件中定义了一组标准函数：
+
+| 函数 | 解释 |
+|-----|-----|
+| `isalnum(c)` | 当`c`是字母或数字时为真 |
+| `isalpha(c)` | 当`c`是字母时为真 |
+| `iscntrl(c)` | 当`c`是控制字符时为真 |
+| `isdigit(c)` | 当`c`是数字时为真 |
+| `isgraph(c)` | 当`c`不是空格但可以打印时为真 |
+| `islower(c)` | 当`c`是小写字母时为真 |
+| `isprint(c)` | 当`c`是可打印字符时为真 |
+| `ispunct(c)` | 当`c`是标点符号时为真 |
+| `isspace(c)` | 当`c`是空白时为真（空格、横向制表符、纵向制表符、回车符、换行符、进纸符） |
+| `isupper(c)` | 当`c`是大写字母时为真 |
+| `isxdigit(c)` | 当`c`是十六进制数字时为真 |
+| `tolower(c)` | 当`c`是大写字母，输出对应的小写字母；否则原样输出`c` |
+| `toupper(c)` | 当`c`是小写字母，输出对应的大写字母；否则原样输出`c` |
+
+- **ctype.h vs. cctype**：C++修改了c的标准库，名称为去掉`.h`，前面加`c`; C++应该用cctype
+
+- 遍历字符串： 
+   - 使用**范围for**（range for）语句： 
+     - `for (auto c: str)`:只用读取（因为会被拷贝）
+     - `for (auto &c: str) c = toupper(c)`：使用引用直接改变字符串中的字符。 （C++11）
+     - 使用下标运算符（[])：
+```cpp
+for(decltype(s.size()) index = 0; index != s.size() && !isspace(s[index]); ++index)
+  s[index] = toupper(s[index])
+```
 
