Completed 3.3 vector & 3.4 迭代器

--- a/ch03/ch03.md
+++ b/ch03/ch03.md
@@ -185,3 +185,171 @@ for(decltype(s.size()) index = 0; index != s.size() && !isspace(s[index]); ++ind
   s[index] = toupper(s[index])
 ```
 
+# 3.3 标准库类型vector
+
+ - vector表示对象的集合
+ - 常被称为“容器（container)“
+ - 一定要用
+```cpp
+#include <vector>
+using std::vector
+```
+
+```cpp
+vector<int> ivec;             // ivec保存着int类型的对象
+vector<Sales_item> Sales_vec;
+vector<vector<string>> file;
+```
+
+ - vector是模版而非类型
+ - 不能包含引用（因为不是对象）
+ - C++11前的编译器可能要求``vector<vector<int> >`` （额外加个空格）
+
+## 3.3.1 定义和初始化vector对象
+
+| 方法 | 解释 |
+|-----|-----|
+| `vector<T> v1` | `v1`是一个空`vector`，它潜在的元素是`T`类型的，执行默认初始化 |
+| `vector<T> v2(v1)` | `v2`中包含有`v1`所有元素的副本 |
+| `vector<T> v2 = v1` | 等价于`v2(v1)`，`v2`中包含`v1`所有元素的副本 |
+| `vector<T> v3(n, val)` | `v3`包含了n个重复的元素，每个元素的值都是`val` |
+| `vector<T> v4(n)` | `v4`包含了n个重复地执行了值初始化的对象 |
+| `vector<T> v5{a, b, c...}` | `v5`包含了初始值个数的元素，每个元素被赋予相应的初始值 |
+| `vector<T> v5={a, b, c...}` | 等价于`v5{a, b, c...}` |
+
+ - vector里的元素全需要是同样的类型
+## 3.2.2 向vector对象中添加元素
+
+ - 在尾部增加元素：`v.push_back(e)` 
+ - eg:
+```cpp
+vector<int> v2;
+for(int i=0; i != 100; ++i)
+  v2.push_back(i);
+```
+
+```cpp
+string word;
+vector<string> text;
+while(cin >> word)
+  text.push_back(word);
+```
+
+## 3.3.3 其他vector操作
+
+`vector`支持的操作：
+
+| 操作 | 解释 |
+|-----|-----|
+| `v.emtpy()` | 如果`v`不含有任何元素，返回真；否则返回假 |
+| `v.size()` |  返回`v`中元素的个数|
+| `v.push_back(t)` | 向`v`的尾端添加一个值为`t`的元素 |
+| `v[n]` | 返回`v`中第`n`个位置上元素的**引用** |
+| `v1 = v2` | 用`v2`中的元素拷贝替换`v1`中的元素  |
+| `v1 = {a,b,c...}` | 用列表中元素的拷贝替换`v1`中的元素 |
+| `v1 == v2` | `v1`和`v2`相等当且仅当它们的元素数量相同且对应位置的元素值都相同 |
+| `v1 != v2` | 同上 |
+| `<`,`<=`,`>`, `>=` | 以字典顺序进行比较 |
+
+ - 访问vector对象中的元素的方法和string的方法差不多：
+
+```cpp
+vector<int> v{1,2,3,4,5,6};
+for(auto &i : v)
+  i *= i;
+for(auto i : v)
+  cout << i << " ";
+cout << endl;
+```
+
+ - vector的empty和size与string的同名成员功能完全一致
+
+**不能用下标形式添加元素**
+- 范围`for`语句内不应该改变其遍历序列的大小。
+- `vector`对象（以及`string`对象）的下标运算符，只能对确知已存在的元素执行下标操作，不能用于添加元素。
+
+
+# 3.4 迭代器介绍
+
+ - 所有标准库容器都可以使用迭代器。
+ - 类似于指针类型，迭代器也提供了对对象的间接访问。
+
+ ## 3.4.1 使用迭代器
+
+  - begin() 返回第一个元素
+  - end() 返回尾元素的下一位，也就是说，该迭代器指示的是容器的一个本不存在的尾元素；因此也被称“尾后迭代器”
+  - 如果容器为空，则begin和end返回是用一个迭代器，都是尾后迭代器
+
+**迭代器运算符**
+
+| 运算符 | 解释 |
+|-----|-----|
+| `*iter` | 返回迭代器`iter`所指向的**元素的引用** |
+| `iter->mem` | 等价于`(*iter).mem` |
+| `++iter` | 令`iter`指示容器中的下一个元素 |
+| `--iter` | 令`iter`指示容器中的上一个元素 |
+| `iter1 == iter2` | 判断两个迭代器是否相等 |
+
+```cpp
+for(auto it = s.begin(); it != s.end() && !isspace(*it); ++it)
+  *it = toupper(*it);
+```
+
+**迭代器类型**
+
+ - 分别有iterator（可读可写）和const_iterator（可读不可写）
+
+```cpp
+vector<int>::iterator it;
+string::iterator it2;
+
+vector<int>::const_iterator it5;  // 可读不可写
+string::const_iterator it4; // 可读不可写
+```
+
+**begin和end运算符**
+
+ - begin和end返回的具体类型由对象是否是常量决定：
+   - 如果是常量，则返回const_iterator
+   - 如果不是常量，则返回iterator
+
+```cpp
+vector<int> v;
+const vector<int> cv;
+auto it1 = v.begin();   // it的类型是vector<int>::iterator
+auto it2 = cv.begin();  // it2的类型是vector<int>::const_iterator
+```
+
+ - 使用`cbegin`或`cend`返回const_iterator:
+```cpp
+auto it3 = v.cbegin(); // 无论vector本事是不是常量，cbegin会返回const_iterator
+```
+
+**结合解引用和成员访问操作**
+```cpp
+// it是个迭代器
+(*it).empty() // 解引用it，然后调用结果对象的empty函数
+*it.empty()   // 错误：这样会访问it（迭代器类）的empty函数，但迭代器没有empty函数。
+it->empty()   // 跟第一个语句意思相同（结合了解引用和成员访问两个操作）
+```
+
+**某些对vector对象的操作会使迭代器失效**
+ - 不能在for循环中向vector对象添加元素
+
+## 3.4.2 迭代器运算
+
+`vector`和`string`迭代器支持的运算：
+
+| 运算符 | 解释 |
+|-----|-----|
+| `iter + n` | 迭代器加上一个整数值仍得到一个迭代器，迭代器指示的新位置和原来相比向前移动了若干个元素。结果迭代器或者指示容器内的一个元素，或者指示容器尾元素的下一位置。 |
+| `iter - n` | 迭代器减去一个证书仍得到一个迭代器，迭代器指示的新位置比原来向后移动了若干个元素。结果迭代器或者指向容器内的一个元素，或者指示容器尾元素的下一位置。 |
+| `iter1 += n` | 迭代器加法的复合赋值语句，将`iter1`加n的结果赋给`iter1` |
+| `iter1 -= n` | 迭代器减法的复合赋值语句，将`iter2`减n的加过赋给`iter1` |
+| `iter1 - iter2` | 两个迭代器相减的结果是它们之间的距离，也就是说，将运算符右侧的迭代器向前移动差值个元素后得到左侧的迭代器。参与运算的两个迭代器必须指向的是同一个容器中的元素或者尾元素的下一位置。 |
+| `>`、`>=`、`<`、`<=` | 迭代器的关系运算符，如果某迭代器 |
+
+- **difference_type**：保证足够大以存储任何两个迭代器对象间的距离，可正可负。
+
+
+
